# ozon-env

./: .gitignore  README.md  pyproject.toml  run_test.sh
.github/workflows/: action.yml
ozonenv/: OzonEnv.py
ozonenv/core/: BaseModels.py  DataValueService.py  DateEngine.py  ModelMaker.py  ModelService.py  OzonModel.py  OzonOrm.py  utils.py
ozonenv/core/custom_templates/pydantic_v2/: BaseModel.jinja2
ozonenv/core/db/: BsonTypes.py  mongodb_utils.py
tests/: test_common.py  test_ozon_env_1_base_mongo.py  test_ozon_env_2_ModelMaker.py  test_ozon_env_3_test_form_1.py  test_ozon_env_4_inject_model.py  test_ozon_env_5_basic_for_worker.py  test_ozon_env_6_json_logic.py  test_ozon_env_7_select_options.py  test_ozon_env_8_local_transactions.py  test_ozon_env_9_find_stream.py
tests/data/: coll_session.json  coll_user.json  posizione.json  test_form_1.0_formio_schema.json  test_form_1.1_formio_schema.json  test_form_1_formio_data.json  test_form_1_formio_schema.json
tests/i18n_translated/en/LC_MESSAGES/: messages.mo
tests/i18n_translated/it/LC_MESSAGES/: messages.mo
tests/models/: documento.py  documento_beni_servizi.py  prodotti.py  riga_doc.py  test_form_1.py
tests/unit/: test_unit_data_value_modes.py
