[project]
name = "ozon-env"
version = "3.3.0"
description = "Ozon Env API"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = [
    { name = "Alessio Gerace", email = "alessio.gerace@gmail.com" }
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython"
]

dependencies = [
    "pydantic>=2.12.5",
    "httpx>=0.28.1",
    "pytz>=2025.2",
    "motor>=3.7.1",
    "python-dateutil>=2.9.0",
    "json_logic_qubit>=0.9.1",
    "aiofiles>=25.1.0",
    "aiopathlib>=0.6.0",
    "jinja2>=3.1.6",
    "Babel>=2.13.1",
    "anyio>=4.10.0",
    "starlette>=0.52.1",
    "redis>=5.3.1",
    "datamodel-code-generator==0.54.0",
    "pendulum>=3.0.0",
    "iso8601",
    "setuptools>=82.0.0; python_version >= '3.12'"
]

[project.urls]
Homepage = "https://github.com/archetipo/ozon-env"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# -------------------------
# POETRY-SPECIFIC CONFIG
# -------------------------

[tool.poetry]
packages = [{ include = "ozonenv" }]
include = ["ozonenv/core/custom_templates/**/*"]
exclude = ["tests/*"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = ">=0.23.4"
pytest-mock = "*"
pytest-cov = "4.1.0"
flake9 = ">=3.8.3"
isort = ">=5.8.0"
black = ">=22.10.0"
types-toml = "*"
httpx = "*"
iso8601 = "*"

# -------------------------
# TOOLING
# -------------------------

[tool.flake8]
max-complexity = 15
max-line-length = 79
extend-ignore = "E203,W293,W291,E211"

[tool.black]
line-length = 79
skip-string-normalization = true
exclude = "(tests/data|\\.eggs|\\.git|\\.hg|\\.mypy_cache|\\.nox|\\.tox|\\.venv|_build|buck-out|build|dist|.*/models\\.py.*|.*/models/.*)"

[tool.isort]
line_length = 79
include_trailing_comma = true
use_parentheses = true
force_single_line = true
skip = "tests"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore:function ham\\(\\) is deprecated:DeprecationWarning"
]
show-capture = "all"

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if not TYPE_CHECKING:"
]
omit = [
    "tests/*",
    "ozonenv/core/cache/*",
    "ozonenv/core/db/BsonTypes.py",
    "ozonenv/core/utils.py",
    "ozonenv/core/OzonClient.py"
]